src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_independents_failed_model.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_independents(\"basic/syntax_error.on\", false)"
---
error: expected parameter or test
  at fixtures/basic/syntax_error.on:3:18
---
m = 10 :kg
