src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_independents_non_recursive_with_ref.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_independents(\"analysis/force_with_ref.on\", false)"
---
m = 10 :kg
